--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "cafu-2.0",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.50.0",
-    "lucide-react": "^0.395.0",
-    "next": "14.2.4",
-    "next-sanity": "^7.1.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "sanity": "^3.50.0",
-    "styled-components": "^6.1.11"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "autoprefixer": "^10.4.19",
-    "typescript": "^5"
-  }
+      "name": "cafu-2.0",
+      "version": "0.1.0",
+      "private": true,
+      "scripts": {
+            "dev": "next dev",
+            "build": "next build",
+            "start": "next start",
+            "lint": "next lint"
+      },
+      "dependencies": {
+            "lucide-react": "^0.395.0",
+            "next": "14.2.4",
+            "react": "^18",
+            "react-dom": "^18"
+      },
+      "devDependencies": {
+            "@types/node": "24.5.2",
+            "@types/react": "19.1.13",
+            "autoprefixer": "^10.4.19",
+            "eslint": "^8",
+            "eslint-config-next": "14.2.4",
+            "postcss": "^8",
+            "tailwindcss": "^3.4.1",
+            "typescript": "^5"
+      }
 }
