--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
             "lucide-react": "^0.395.0",
             "next": "14.2.4",
             "react": "^18",
-            "react-dom": "^18"
+            "react-dom": "^18",
+            "xlsx": "^0.18.5"
       },
       "devDependencies": {
             "@types/node": "24.5.2",
