--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
             "lint": "next lint"
       },
       "dependencies": {
+            "framer-motion": "^11.0.0",
             "lucide-react": "^0.395.0",
             "next": "14.2.4",
             "react": "^18",
